fix: latest articles position on mobile

--- a/style.css
+++ b/style.css
@@ -334,16 +334,17 @@ section#latest-articles img {
 
 section#latest-articles ul {
     text-align: start;
-    padding: 0 1rem;
+    padding: 0;
+    margin: 0 auto;
 
     @media only screen and (min-width: 1024px) {
         display: flex;
-        padding: 0;
       }
 }
 
 section#latest-articles ul li {
     width: 325px;
+    margin: 0 auto;
     @media only screen and (min-width: 1024px) {
         max-width: 260px;
         padding-right: 1.875rem;
